K8S/mongo-express-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-depl
spec:
  selector:
    matchLabels:
      app: mongo-express-service
  template:
    metadata:
      labels:
        app: mongo-express-service
    spec:
      containers:
      - name: mongo-express-service
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: mongo-express-service
  ports:
  - protocol: TCP
    name: mongo-express-service
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: mongo-express-service
  ports:
  - protocol: TCP
    name: mongo-express-service
    port: 8081
    targetPort: 8081
