K8S/mongodb-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-auth-depl
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: mongodb-claim
      volumes:
      - name: mongodb-claim
        persistentVolumeClaim:
          claimName: mongodb-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    name: mongodb
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    name: mongodb
    port: 27017
    targetPort: 27017
