K8S/platforms-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-node-service
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platform-node-service
    protocol: TCP
    port: 80
    targetPort: 80
