K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kebernetes.io/use-regex: 'true'
  labels:
    name: ingress-service
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/Platform"
        backend:
          service:
            name: platforms-clusterip-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/Command/Platform"
        backend:
          service:
            name: commands-clusterip-service
            port:
              number: 80
      - pathType: Prefix
        path: "/api/User"
        backend:
          service:
            name: user-service-clusterip-service
            port:
              number: 80
      - pathType: Prefix
        path: "/auth/login"
        backend:
          service:
            name: auth-service-clusterip-service
            port:
              number: 3001          
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express-clusterip-service
            port: 
              number: 8081
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: node-auth-clusterip-service
            port: 
              number: 3001
